Refactor ElectionDataFetcher to improve data fetching and processing logic